adding new tab for proj links

--- a/projects/project-2.html
+++ b/projects/project-2.html
@@ -57,7 +57,8 @@
       <h1 class="heading">Deep Learning: Decoding Diversity</h1>
       <p class="paragraph-8"><span class="highlight-orange">Description</span>:<br>This was a group project, as
         part of the final for the course titled: <a
-          href="https://disabroad.org/copenhagen/courses/artificial-neural-networks-and-deep-learning/"> Artificial
+          href="https://disabroad.org/copenhagen/courses/artificial-neural-networks-and-deep-learning/" target="_blank">
+          Artificial
           Neural Networks & Deep Learning
           .</a><br>More details to come!</p>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
