--- a/projects/project-3.html
+++ b/projects/project-3.html
@@ -56,9 +56,10 @@
     <div class="w-layout-blockcontainer container-5 w-container">
       <h1 class="heading">U.S. Gun Violence:<br>Before and After COVID-19</h1>
       <p class="paragraph-8"><span class="highlight-orange">Description</span>:<br>This was a group project, as
-        part of the final for the course titled: <a href="https://jeffrz.com/info3300/"> Data Driven Web-Applications.
+        part of the final for the course titled: <a href="https://jeffrz.com/info3300/" target="_blank"> Data Driven
+          Web-Applications.
         </a></p> See the embeded page below or click here to visit the
-      interactive page! <a text-align=center
+      interactive page! <a text-align=center target="_blank"
         href="https://pages.github.coecis.cornell.edu/sfg63/info3300-p2/"><strong>CLICK
           HERE</strong><br><br></a>More details to come!<br><br>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
