--- a/work.html
+++ b/work.html
@@ -48,6 +48,9 @@
   </div>
   <h2 class="heading">Academics & Experience</h2>
   <p class="paragraph-7">Click on the buttons inside the tabbed menu!</p>
+  <div class="w-layout-blockcontainer container-2 w-container">
+    <a href="Canva Resume.pdf" class="button-2 w-button" target="_blank"> My Resume &gt;</a>
+  </div> <br>
   <!-- Tab links -->
   <div class="tab">
     <button class="tablinks" onclick="openCity(event, 'Academics')">Academics</button>
