reordering experience layout

--- a/work.html
+++ b/work.html
@@ -99,9 +99,9 @@
           </div>
           <p class="paragraph-4"><strong>Grad</strong>: May 2024<br><strong>GPA</strong>: 3.7</p>
         </div>
-        <div class="w-layout-blockcontainer logo-right-lister w-container"><img src="images/dis-logo.svg" loading="lazy"
+        <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/dis-logo.svg" loading="lazy"
             width="240" alt="" class="image-2">
-          <p class="paragraph-4"><strong>Dates</strong>: January - May 2023<br><strong>GPA</strong>: 4.0</p>
+
           <div class="w-layout-blockcontainer w-container">
             <p class="paragraph-5"><span class="highlight-pink"><strong>DIS: Study Abroad in
                   Scandinavia</strong></span>, <em>Copenhagen, Denmark<br></em>Study Abroad Program in Computer
@@ -113,6 +113,7 @@
               <li>Artificial Neural Networks &amp; Deep Learning</li>
             </ul>
           </div>
+          <p class="paragraph-4"><strong>Dates</strong>: January - May 2023<br><strong>GPA</strong>: 4.0</p>
         </div>
       </section>
     </div>
@@ -127,7 +128,7 @@
       </section>
       <section>
         <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/cornell-logo-3.gif"
-            loading="lazy" width="160" alt="" class="company-logo">
+            loading="lazy" width="161" alt="" class="company-logo">
           <div class="w-layout-blockcontainer w-container">
             <p class="paragraph-3"><span class="highlight-pink"><strong>Undergraduate Teaching
                   Assistant</strong></span>, <br>‍<strong><em>Cornell Bowers College of Computing
@@ -179,10 +180,11 @@
             loading="lazy" width="240" sizes="160px" alt=""
             srcset="images/bofa-logo.png 500w, images/bofa-logo.png 800w, images/bofa-logo.png 1024w"
             class="company-logo">
-          <p class="paragraph-4">June - Aug 2022<br><em>Charlotte, NC</em></p>
+
           <p class="paragraph-5"><span class="highlight-pink"><strong>Global Technology Summer
                 Analyst</strong></span><strong><em>, Bank of
                 America</em></strong><span><em><br></em></span><em><br></em></p>
+          <p class="paragraph-4">June - Aug 2022<br><em>Charlotte, NC</em></p>
         </div>
         <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/mitre-logo.png"
             loading="lazy" width="161" sizes="160px" alt=""
