--- a/activities.html
+++ b/activities.html
@@ -23,6 +23,27 @@
 </head>
 
 <body class="body-2">
+  <button class="button" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  <script>// Get the button:
+    let mybutton = document.getElementById("myBtn");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () { scrollFunction() };
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0; // For Safari
+      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+
+    } </script>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navigation w-nav">
     <a href="/" aria-current="page">
@@ -44,6 +65,126 @@
           class="menu-icon"></div>
     </div>
   </div>
+  </div>
+  <div class="w-layout-blockcontainer container-7 w-container">
+    <h2 class="heading">My Activities</h2>
+    <a href="#collage" class="button pill-shape w-button">Image Gallery</a>
+  </div><br>
+  <div class="w-layout-blockcontainer container-6 w-container">
+    <section>
+      <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/star-circle.png" loading="lazy"
+          width="161" sizes="(max-width: 479px) 100vw, 160px" alt=""
+          srcset="images/star-circle-p-500.png 500w, images/star-circle.png 692w" class="company-logo">
+        <div class="w-layout-blockcontainer container-8 w-container">
+          <p class="paragraph-3"><span class="highlight-pink"><strong>Alpha Phi Omega </strong></span>(Community Service
+            Fraternity)<strong><em></em></strong><br></p>
+          <p class="paragraph-4">February 2021 to Present<br></p>
+          <h6 class="heading-4">Involvement:</h6>
+          <ul role="list" class="list">
+            <li class="list-item">Recruitment / New Member Education Assistant, November 2023 to Present</li>
+            <li class="list-item">Family Head and Event Planner, Jan 2022 to May 2022 </li>
+          </ul>
+        </div>
+      </div>
+      <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/star-circle.png" loading="lazy"
+          width="161" sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo">
+        <div class="w-layout-blockcontainer container-8 w-container">
+          <p class="paragraph-3"><span class="highlight-pink"><strong>Community Volunteering </strong></span>(<a
+              style="text-decoration:none; display:inline" href="https://elevationchurch.org/ekidz/"
+              target="_blank">Elevation
+              Church</a> / <a style="text-decoration:none; display:inline" href="https://yourjourney.tv/code-red/"
+              target="_blank">The
+              Journey Church</a>)<strong><em></em></strong></p>
+          <p class="paragraph-4">JUNE 2022 to Present<br></p>
+          <h6 class="heading-4">Involvement:</h6>
+          <ul role="list" class="list">
+            <li class="list-item">Elevation Church: Community Childcare Volunteer, June 2022 - Aug 2022</li>
+            <li class="list-item">The Journey Church: Code Red Volunteer , June 2022 to Present </li>
+          </ul>
+        </div>
+      </div>
+      <div class="w-layout-blockcontainer logo-left-lister w-container"><a href="https://www.cornellthetatau.com/"
+          target="_blank"><img src="images/theta-tau-logo.png" loading="lazy" width="161"
+            sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo"></a>
+        <div class="w-layout-blockcontainer container-8 w-container">
+          <p class="paragraph-3"><a style="text-decoration:none" href="https://www.cornellthetatau.com/brotherhood/"
+              target="_blank"><span class="highlight-pink"><strong>Cornell Theta Tau </strong></span>(Professional
+              Engineering Fraternity)<strong><em></em></strong></a></p>
+          <p class="paragraph-4">September 2022 to Present<br></p>
+          <h6 class="heading-4">Involvement:</h6>
+          <ul role="list" class="list">
+            <li class="list-item"><strong>Executive Board: </strong>Diversity and Inclusion Chair, May 2023 to Present
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/cru-logo.jpeg" loading="lazy"
+          width="161" sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo">
+        <div class="w-layout-blockcontainer container-8 w-container">
+          <p class="paragraph-3"><span class="highlight-pink"><strong>Cru
+                Cornell</strong></span><strong><em></em></strong><br></p>
+          <p class="paragraph-4">September 2020 to Present<br></p>
+          <h6 class="heading-4">Involvement:</h6>
+          <ul role="list" class="list">
+            <li class="list-item">Community Team Leader, July 2022 to Present</li>
+            <li class="list-item-3">Worship Team Member, Sept 2021 to Present </li>
+          </ul>
+        </div>
+      </div>
+      <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/nsbe-logo.png" loading="lazy"
+          width="161" sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo">
+        <div class="w-layout-blockcontainer container-9 w-container">
+          <p class="paragraph-3"><span class="highlight-pink"><strong>NSBE Cornell </strong></span>(National Society of
+            Black Engineers)<strong><em></em></strong><br></p>
+          <p class="paragraph-4">May 2021 to Present<br></p>
+          <h6 class="heading-4">Involvement:</h6>
+          <ul role="list" class="list">
+            <li class="list-item-3">Upperclassmen Mentor, Aug 2023 to Present </li>
+          </ul>
+        </div>
+      </div>
+      <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/urmclogo.png" loading="lazy"
+          width="161" sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo">
+        <div class="w-layout-blockcontainer w-container">
+          <p class="paragraph-3"><span class="highlight-pink"><strong>URMC </strong></span>(Underrepresented Minorities
+            in Computing)<strong><em></em></strong><br></p>
+          <p class="paragraph-4">May 2021 to Present<br></p>
+          <h6 class="heading-4">Involvement:</h6>
+          <ul role="list" class="list">
+            <li class="list-item"><strong>Executive Board:</strong> Secretary (FA 2021), Mentorship Chair (SP 2022),
+              Outreach Director (FA 2022)</li>
+            <li class="list-item-3">Upperclassmen Mentor, Sept 2022 to Present </li>
+            <li class="list-item"><strong>Conferences:</strong> Tapia Conference 2022, Grace Hopper Conference 2023</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="collage">
+      <h2 class="heading">Gallery</h2>
+      <div id="pic-cells" class="w-layout-layout collage wf-layout-layout">
+        <div id="cru-pic" class="w-layout-cell cell"><img src="images/IMG_4894.jpg" loading="lazy" width="409"
+            sizes="(max-width: 479px) 100vw, 409px" alt="">
+          <div class="text-block-3">Cru Cornell, September 2023</div>
+        </div><br>
+        <div id="journey-pic" class="w-layout-cell cell"><img src="images/journey-serve.JPG" loading="lazy"
+            sizes="(max-width: 582px) 100vw, 582px" alt="">
+          <div class="text-block-3">The Journey Church Volunteer, July 2023</div>
+        </div><br>
+        <div id="tt-pic" class="w-layout-cell cell-2"><img src="images/theta-tau.JPG" loading="lazy"
+            sizes="(max-width: 582px) 100vw, 582px" alt="">
+          <div class="text-block-3">Cornell Theta Tau, November 2022</div>
+        </div><br>
+        <div id="urmc-pic" class="w-layout-cell cell"><img src="images/urmc-table.jpg" loading="lazy" width="422"
+            sizes="(max-width: 479px) 100vw, 422px" alt="">
+          <div class="text-block-3">URMC, September 2022</div>
+        </div><br>
+        <div id="elev-pic" class="w-layout-cell cell"><img src="images/elevation-ekidz.JPG" loading="lazy"
+            sizes="(max-width: 479px) 53vw, (max-width: 767px) 40vw, (max-width: 991px) 291.1953125px, 376px" alt=""
+            class="image-4">
+          <div class="text-block-3">Elevation Church Volunteer, July 2022</div>
+        </div>
+      </div>
+    </section>
   </div>
   <div class="footer-wrap">
     <div>
