--- a/activities.html
+++ b/activities.html
@@ -68,7 +68,7 @@
   </div>
   <div class="w-layout-blockcontainer container-7 w-container">
     <h2 class="heading">My Activities</h2>
-    <a href="#collage" class="button pill-shape w-button">Image Gallery</a>
+    <a href="#collage" class="button-2 pill-shape w-button">Image Gallery</a>
   </div><br>
   <div class="w-layout-blockcontainer container-6 w-container">
     <section>
