major overhaul lol

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
       I also have strong interests in cyberwarfare, both from a capability and governance perspective.</p>
   </div>
   <section class="section-2">
-    <p class="paragraph"><span class="text-span-9"><strong>Skills:<br></strong></span>‍<br></p>
+    <br>
+    <!-- <p class="paragraph"><span class="text-span-9"><strong>Skills:<br></strong></span>‍<br></p> -->
     <div class="w-layout-blockcontainer w-container"></div>
   </section>
   <div class="footer-wrap">
