--- a/projects/project-1.html
+++ b/projects/project-1.html
@@ -70,18 +70,22 @@
       <ul role="list" class="list-2">
         <li class="list-item-4"><strong>Programming Languages:</strong> OCaml</li>
         <li><strong>Tools: </strong>Git</li>
-        <li><strong>Other: </strong>Agile Workflow Methodology,</li>
+        <li><strong>Other: </strong>Agile Workflow Methodology, Teamwork, Delivering Tasks by Deadlines</li>
       </ul>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
           sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
-        <p class="highlight-pink">Purpose &amp; Use</p>
+        <p class="highlight-pink">Takeaways</p>
       </section>
       <ul role="list" class="list-2">
-        <li class="list-item-4"><strong>Purpose: </strong>This project was created as a final composition for a course
-          on functional programming.</li>
-        <li><strong>Use:</strong> This game is primarily for entertainment purposes, as it is a digital version of the
-          traditional Mancala game. Additionally, this can be used to become more familiar with the terminal via game.
+        <li><strong>Effective Collaboration Techniques: </strong>This challenged me to independently learn best
+          practices for version control when working on shared resources. Utilizing proper documentation and
+          communication in addition to Git are skills I have been able to translate into other coursework and beyond the
+          classroom in my team-oriented industry experiences.</li>
+        <li><strong>Concision:</strong> My teammates and I came from different major and
+          interest backgrounds, and often had different levels of understanding as we encountered issues.
+          This project taught me how to better synthesize my ideas and convey them to different audiences while
+          maintaining productivity.
         </li>
       </ul>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
