--- a/projects/project-2.html
+++ b/projects/project-2.html
@@ -60,27 +60,37 @@
           href="https://disabroad.org/copenhagen/courses/artificial-neural-networks-and-deep-learning/" target="_blank">
           Artificial
           Neural Networks & Deep Learning
-          .</a><br>More details to come!</p>
+          .</a><br>This project explores the uses of neural networks for human-centered demographics and
+        the subsequent outcome of the project showcases how bias in data can impact such models. Utilizing a dataset of
+        images on Kaggle, our group sought to create a learning model that identified age, gender, and ethnicity from
+        these images.<br><br> Our goal was to understand at a high level how nueral networks functioned, as well as gain
+        insight into the issues in artificial intelligence applications to real-world use cases, such as identity
+        recognition.</p>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
           sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
         <p><span class="highlight-pink">Skills &amp; Tools</span></p>
       </section>
       <ul role="list" class="list-2">
-        <li class="list-item-4"><strong>Programming Languages:</strong>Python</li>
+        <li class="list-item-4"><strong>Programming Languages:</strong> Python</li>
         <li><strong>Tools: </strong>Git, Tensorflow/Keras, Pandas, Matplotlib</li>
-        <li><strong>Other: </strong>Agile Workflow Methodology,</li>
+        <li><strong>Other: </strong>Agile Workflow Methodology, Medium</li>
       </ul>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
           sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
-        <p class="highlight-pink">Purpose &amp; Use</p>
+        <p class="highlight-pink"> Takeaways</p>
       </section>
       <ul role="list" class="list-2">
-        <li class="list-item-4"><strong>Purpose: </strong>This project was created as a final composition for a course
-          on deep learning.</li>
-        <li><strong>Use:</strong> This project explores the uses of neural networks for human-centered demographics and
-          the subsequent outcome of the project showcases how bias in data can impact such models.
+        <li class="list-item-4"><strong>The Social Impacts of Technology:</strong> As alluded to, the outcome of this
+          project,
+          while fairly successful, showed us how issues related to skewed datasets can have massive impacts on the
+          correctness of predictions. Furthermore, our project challenged us to look into the implications of such
+          issues. </li>
+        <li><strong>Cross-Cultural Work Environment:</strong> This project was part of a study abroad program, and it
+          involved
+          a mult-national and lingual team; it was a great opportunity to learn different styles of work and navigate
+          differences of communication, conflict, and other aspects of work management.
         </li>
       </ul>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
