--- a/projects/project-3.html
+++ b/projects/project-3.html
@@ -68,19 +68,22 @@
         <p><span class="highlight-pink">Skills &amp; Tools</span></p>
       </section>
       <ul role="list" class="list-2">
-        <li class="list-item-4"><strong>Programming Languages:</strong>HTML, CSS, JavaScript</li>
+        <li class="list-item-4"><strong>Programming Languages:</strong> HTML, CSS, JavaScript</li>
         <li><strong>Tools: </strong>Git, Pandas, Matplotlib</li>
-        <li><strong>Other: </strong>Agile Workflow Methodology</li>
       </ul>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
           sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
-        <p class="highlight-pink">Purpose &amp; Use</p>
+        <p class="highlight-pink"> Takeaways</p>
       </section>
       <ul role="list" class="list-2">
-        <li class="list-item-4"><strong>Purpose: </strong></li>
-        <li><strong>Use:</strong>
-        </li>
+        <li class="list-item-4"><strong> Continuous Learning:</strong></li> Given that this was the final project of the
+        class, our team didn't expect to struggle as much as we did in figuring out how to create the outcomes we
+        desired. It additional initiative on our part to continue seeking out resources beyond the class to get the
+        information necessary to solve our problems. This showed be tangibly how there will always be more to learn, and
+        the skill can always be further improved even when formal education is completed.
+
+
       </ul>
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
