--- a/work.html
+++ b/work.html
@@ -188,32 +188,87 @@
 
 
         </div>
-        <div class="w-layout-blockcontainer logo-left-lister w-container">
-          <a href="https://www.engineering.cornell.edu/eli/aew">
-            <img src="images/cornell-logo-3.gif" loading="lazy" width="161" alt="" class="company-logo">
+
+        <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/cornell-logo-3.gif"
+            loading="lazy" height="160" width="160" alt="" class="company-logo">
           </a>
-          <p class="paragraph-3"><span class="highlight-pink"><strong>Academic Excellence Worship
-                Facilitator</strong></span><strong><em>, <br>Cornell Engineering</em></strong><em><br></em><span
-              class="highlight-orange">    </span><br><br></p>
+          <div class="w-layout-blockcontainer w-container">
+            <p class="paragraph-3"><span class="highlight-pink"><strong>Academic Excellence Worship
+                  Facilitator</strong></span><strong><em>, <br>Cornell Engineering</em></strong><br></p>
+            <ul role="list" class="list">
+              <li class="list-item"> Managed a weekly class of <strong>22 Engineering students</strong> to facilitate
+                productive work and
+                discussion resulting in <strong>100%</strong> of the class performing above the median in the course in
+                previous semesters. </li>
+              <li class="list-item-2">Aided students in understanding concepts and techniques used in introductory
+                python programming for foundational mastery. </li>
+
+            </ul>
+          </div>
           <p class="paragraph-4">Aug 2021 - Dec 2022<br><em>Ithaca, NY</em></p>
+
         </div>
+
+        <!-- <div class="w-layout-blockcontainer logo-left-lister w-container">
+          <a href="https://www.engineering.cornell.edu/eli/aew">
+            <img src="images/cornell-logo-3.gif" loading="lazy" height="160" width="160" alt="" class="company-logo">
+          </a>
+          <div class="w-layout-blockcontainer w-container">
+            <p class="paragraph-3"><span class="highlight-pink"><strong>Academic Excellence Worship
+                  Facilitator</strong></span><strong><em>, <br>Cornell Engineering</em></strong><br></p>
+            <ul role="list" class="list">
+              <li class="list-item"> Managed a weekly class of <strong>22 Engineering students</strong> to facilitate
+                productive work and
+                discussion resulting in <strong>100%</strong> of the class performing above the median in the course in
+                previous semesters. </li>
+              <li class="list-item-2">Aided students in understanding concepts and techniques used in introductory
+                python programming for foundational mastery. </li>
+
+            </ul>
+          </div>
+          <p class="paragraph-4">Aug 2021 - Dec 2022<br><em>Ithaca, NY</em></p>
+        </div> -->
         <div class="w-layout-blockcontainer logo-right-lister w-container"><img src="images/bofa-logo.png"
-            loading="lazy" width="240" sizes="160px" alt=""
+            loading="lazy" height="160" alt=""
             srcset="images/bofa-logo.png 500w, images/bofa-logo.png 800w, images/bofa-logo.png 1024w"
             class="company-logo">
+          <div class="w-layout-blockcontainer w-container">
 
-          <p class="paragraph-5"><span class="highlight-pink"><strong>Global Technology Summer
-                Analyst</strong></span><strong><em>, Bank of
-                America</em></strong><span><em><br></em></span><em><br></em></p>
+            <p class="paragraph-5"><span class="highlight-pink"><strong>Global Technology Summer
+                  Analyst</strong></span><strong><em>, Bank of
+                  America</em></strong><br></p>
+            <ul role="list" class="list">
+              <li class="list-item"> Maintained UI/UX and backend platforms for the Digital Platform technology team,
+                employing a <strong>Kanban Agile</strong> workflow. </li>
+              <li class="list-item-2">Applied functional changes to auto loan applications using <strong>NodeJS</strong>
+                and <strong>Git</strong> to adhere to ADA guidelines. </li>
+              <li class="list-item-3">Managed portfolios to streamline code releases and audited current projects within
+                the Merchant Services team using <strong>Jira</strong>.
+              </li>
+            </ul>
+          </div>
           <p class="paragraph-4">June - Aug 2022<br><em>Charlotte, NC</em></p>
         </div>
         <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/mitre-logo.png"
             loading="lazy" width="161" sizes="160px" alt=""
             srcset="images/mitre-logo.png 500w, images/mitre-logo.png 800w, images/mitre-logo.png 1080w, images/mitre-logo.png 1600w, images/mitre-logo.png 1920w"
             class="company-logo">
-          <p class="paragraph-3"><span class="highlight-pink"><strong>Cybersecurity Intelligence
-                Intern</strong></span><strong><em>,<br>The MITRE Corporation</em></strong><em><br><br></em><span
-              class="highlight-orange"><br>    </span><br><br></p>
+          <div class="w-layout-blockcontainer w-container">
+            <p class="paragraph-3"><span class="highlight-pink"><strong>Cybersecurity Intelligence
+                  Intern</strong></span><strong><em>,<br>The MITRE Corporation</em></strong><br></p>
+
+            <ul role="list" class="list">
+              <li class="list-item"> Evaluated and organized data regarding cyber threats to further develop the
+                <strong>MITRE ATT&CK</strong> enterprise framework.
+              </li>
+              <li class="list-item-2">Applied organizational changes to <strong>42 techniques</strong> within ATT&CK
+                framework input to increase usability and readability. </li>
+              <li class="list-item-3"> Identified a new sub-technique, <strong>Double File Extension</strong>, within
+                the Masquerading technique while investigating APTs
+                correlated with Phishing and published this addition to the framework as part of the <strong>October
+                  2021 release</strong> of ATT&CK.</li>
+            </ul>
+          </div>
           <p class="paragraph-4">June 2021 - May 2022<br><em>Remote</em></p>
         </div>
       </section>
