--- a/projects/project-home.html
+++ b/projects/project-home.html
@@ -135,8 +135,8 @@
                 src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124af1aa12aadf_placeholder%201.svg"
                 loading="lazy" alt="" class="proj-image">
               <div class="proj-info">
-                <h3 class="proj-name">Project Name</h3>
-                <p class="proj-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h3 class="proj-name">Coming Soon!</h3>
+                <p class="proj-description">Future projects in the works.</p>
                 <a href="#" class="text-link-arrow w-inline-block">
                   <div>Learn More</div>
                   <div class="arrow-embed w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none"
@@ -154,8 +154,8 @@
                 src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124af1aa12aadf_placeholder%201.svg"
                 loading="lazy" alt="" class="proj-image">
               <div class="proj-info">
-                <h3 class="proj-name">Project Name</h3>
-                <p class="proj-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h3 class="proj-name">Coming Soon!</h3>
+                <p class="proj-description">Future projects in the works.</p>
                 <a href="#" class="text-link-arrow w-inline-block">
                   <div>Learn More</div>
                   <div class="arrow-embed w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none"
@@ -173,8 +173,8 @@
                 src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124af1aa12aadf_placeholder%201.svg"
                 loading="lazy" alt="" class="proj-image">
               <div class="proj-info">
-                <h3 class="proj-name">Project Name</h3>
-                <p class="proj-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h3 class="proj-name">Coming Soon!</h3>
+                <p class="proj-description">Future projects in the works.</p>
                 <a href="#" class="text-link-arrow w-inline-block">
                   <div>Learn More</div>
                   <div class="arrow-embed w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none"
