--- a/activities.html
+++ b/activities.html
@@ -260,7 +260,7 @@
       <a href="https://linkedin.com/in/green-simone/" target="_blank" class="footer-item">LINKEDIN</a><img
         src="images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
         srcset="images/github-logo-p-500.png 500w, images/github-logo.png 512w" alt="" class="logo">
-      <a href="https://github.com/sgreen2302" target="_blank" class="footer-item">GITHUB</a>
+      <a href="https://github.com/simonegreen" target="_blank" class="footer-item">GITHUB</a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=653f2156febcba79e3382b0a"
