updates to new project 4

--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project 4</title>
+  <title>Decoding Diversity</title>
   <meta content="Project 4" property="og:title">
   <meta content="Project 4" property="twitter:title">
   <meta property="og:image" content="../images/simone-logo.jpeg">
@@ -45,64 +45,67 @@
   </div>
   </div>
   <div class="section">
-    <div class="container">
-      <div class="w-layout-grid project-overview-grid">
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-e3382b4b">
-          <h1 class="heading-jumbo">Project 4</h1>
-          <div class="paragraph-light">Graphic Design</div>
-        </div>
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-e3382b4b">
-          <div class="position-name-text">Project Overview</div>
-          <div class="paragraph-light cc-position-name">Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
-            coast of the Semantics, a large language ocean. </div>
-        </div>
-        <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-e3382b4b">
-          <div class="position-name-text">My Contributions</div>
-          <div class="paragraph-light cc-position-name">Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
-            coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies
-            it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-            into your mouth.</div>
-        </div>
-      </div>
-    </div>
+    <div class="container"></div>
+    <a href="../projects/project-home.html" class="button-3 w-button">X</a>
   </div>
-  <div class="section"><img src="../images/portfolio-4---wide.svg" alt="" class="detail-header-image"></div>
   <div class="section">
-    <div class="container">
-      <div class="w-layout-grid project-description-grid">
-        <div id="w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-e3382b4b" class="paragraph-light">Far far away, behind the
-          word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they
-          live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden
-          flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which
-          roasted parts of sentences fly into your mouth. <br>‍<br>Far far away, behind the word mountains, far from the
-          countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-          the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the
-          countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at
-          the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and
-          supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
-          fly into your mouth. <br>‍<br>Far far away, behind the word mountains, far from the countries Vokalia and
-          Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-          Semantics, a large language ocean. </div>
-        <div id="w-node-_1f85730f-9889-a71b-9be8-c086a8d10760-e3382b4b" class="work-position-wrap">
-          <div class="position-name-text">Webflow</div>
-          <div class="paragraph-light cc-position-name">Dictator</div>
-          <div class="paragraph-tiny cc-paragraph-tiny-light">Aug 2017 — forever<br></div>
+    <div style="padding-top:56.17021276595745%" class="video w-video w-embed"><iframe
+        src="https://docs.google.com/presentation/d/e/2PACX-1vRPX9l6dY1-gMVmtV384DMfy-ISh2igRLODq--dIxwYHbYWj_mXNPa28XBi3Qqv-4b3jXBNYPHFzVhk/embed?start=false&loop=false&delayms=3000"
+        frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true"
+        webkitallowfullscreen="true"></iframe></div>
+    <div class="w-layout-blockcontainer container-5 w-container">
+      <h1 class="heading">Generative News Topic Headlines</h1>
+      <p class="paragraph-8"><span class="highlight-orange">Description</span>:<br>This was a group project, as
+        part of our submission to the self-guided <a href="https://classes.cornell.edu/browse/roster/FA23/class/CS/4701"
+          target="_blank" style="display: inline">
+          Artificial Intelligence Practicum course</a>.<br><br>This project took place in a team of three and was dually
+        inspired by the Kaggle dataset <a href="components.one/datasets/all-the-news-2-news-articles-dataset/"
+          target="_blank" style="display: inline">All The News 2.0</a> as
+        well as the <a href="www.kaggle.com/code/shivamb/beginners-guide-to-text-generation-using-lstms" target="_blank"
+          style="display: inline">introductory language model tutorial</a> by Shivamb.<br><br> More details to come!</p>
+
+      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p><span class="highlight-pink">Skills &amp; Tools</span></p>
+      </section>
+      <ul role="list" class="list-2">
+        <li class="list-item-4"><strong>Programming Languages:</strong> Python</li>
+        <li><strong>Tools: </strong>Git, Tensorflow/Keras, Pandas, Matplotlib, Jupyter Notebooks</li>
+        <li><strong>Other: </strong> </li>
+      </ul>
+      <!-- <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p class="highlight-pink"> Takeaways</p>
+      </section> -->
+      <!-- <ul role="list" class="list-2">
+        <li class="list-item-4"><strong>The Social Impacts of Technology:</strong> As alluded to, the outcome of this
+          project,
+          while fairly successful, showed us how issues related to skewed datasets can have massive impacts on the
+          correctness of predictions. Furthermore, our project challenged us to look into the implications of such
+          issues. </li>
+        <li><strong>Cross-Cultural Work Environment:</strong> This project was part of a study abroad program, and it
+          involved
+          a mult-national and lingual team; it was a great opportunity to learn different styles of work and navigate
+          differences of communication, conflict, and other aspects of work management.
+        </li>
+      </ul> -->
+      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+          srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
+          sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
+        <p class="highlight-pink">Links</p>
+      </section>
+      <div class="w-layout-blockcontainer w-container">
+        <div class="footer-links-copy"><img src="../images/paper.png" width="25"
+            sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" srcset="../images/paper.png" alt=""
+            class="logo">
+          <a href="https://docs.google.com/document/d/1mgm-D8_NawOO2RVogTfPVFkSA12sjV1w9guMWJMmWQw/edit?usp=sharing"
+            target="_blank" class="footer-item">PAPER</a><img src="../images/github-logo.png" width="25"
+            sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+            srcset="../images/github-logo-p-500.png 500w, ../images/github-logo.png 512w" alt="" class="logo">
+          <a href="https://github.com/simonegreen/cs4701" target="_blank" class="footer-item">REPOSITORY</a>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="section"><img src="../images/portfolio-2---wide.svg" width="920" alt="" class="detail-image"><img
-      src="../images/portfolio-1---wide.svg" width="920" alt="" class="detail-image"><img
-      src="../images/portfolio-4---wide.svg" width="920" alt="" class="detail-image"></div>
-  <div class="section">
-    <div class="container">
-      <div class="email-section">
-        <h3>Want to work together?</h3>
-        <p>If you like what you see and want to work together, get in touch!</p>
-        <a href="mailto:jane.lo@portfolio.com?subject=You&#x27;ve%20got%20mail!"
-          class="email-link">jane@portfolio.com</a>
       </div>
     </div>
   </div>
@@ -124,7 +127,7 @@
       <a href="https://linkedin.com/in/green-simone/" target="_blank" class="footer-item">LINKEDIN</a><img
         src="../images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
         srcset="../images/github-logo-p-500.png 500w, ../images/github-logo.png 512w" alt="" class="logo">
-      <a href="https://github.com/sgreen2302" target="_blank" class="footer-item">GITHUB</a>
+      <a href="https://github.com/simonegreen" target="_blank" class="footer-item">GITHUB</a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=653f2156febcba79e3382b0a"
