--- a/projects/project-home.html
+++ b/projects/project-home.html
@@ -131,13 +131,12 @@
             </div>
           </div>
           <div class="proj-slide w-slide">
-            <div class="projects"><img
-                src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124af1aa12aadf_placeholder%201.svg"
-                loading="lazy" alt="" class="proj-image">
+            <div class="projects"><img src="../images/newsheadlines.png" loading="lazy" alt="" class="proj-image">
               <div class="proj-info">
-                <h3 class="proj-name">Coming Soon!</h3>
-                <p class="proj-description">Future projects in the works.</p>
-                <a href="#" class="text-link-arrow w-inline-block">
+                <h3 class="proj-name">Generating News Headlines</h3>
+                <p class="proj-description">A neural network that utilizes language models to generate news headlines
+                  mimicking popular sources.</p>
+                <a href="../projects/project-4.html" class="text-link-arrow w-inline-block">
                   <div>Learn More</div>
                   <div class="arrow-embed w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
