fixed proj4 links

--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -59,10 +59,11 @@
         part of our submission to the self-guided <a href="https://classes.cornell.edu/browse/roster/FA23/class/CS/4701"
           target="_blank" style="display: inline">
           Artificial Intelligence Practicum course</a>.<br><br>This project took place in a team of three and was dually
-        inspired by the Kaggle dataset <a href="components.one/datasets/all-the-news-2-news-articles-dataset/"
+        inspired by the Kaggle dataset <a href="https://components.one/datasets/all-the-news-2-news-articles-dataset/"
           target="_blank" style="display: inline">All The News 2.0</a> as
-        well as the <a href="www.kaggle.com/code/shivamb/beginners-guide-to-text-generation-using-lstms" target="_blank"
-          style="display: inline">introductory language model tutorial</a> by Shivamb.<br><br> More details to come!</p>
+        well as the <a href="https://www.kaggle.com/code/shivamb/beginners-guide-to-text-generation-using-lstms"
+          target="_blank" style="display: inline">introductory language model tutorial</a> by Shivamb.<br><br> More
+        details to come!</p>
 
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
