--- a/activities.html
+++ b/activities.html
@@ -91,9 +91,8 @@
   </div><br>
   <div class="w-layout-blockcontainer container-6 w-container">
     <section>
-      <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/star-circle.png" loading="lazy"
-          width="161" sizes="(max-width: 479px) 100vw, 160px" alt=""
-          srcset="images/star-circle-p-500.png 500w, images/star-circle.png 692w" class="company-logo">
+      <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/apo.png" loading="lazy"
+          width="161" sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo">
         <div class="w-layout-blockcontainer container-8 w-container">
           <p class="paragraph-3"><span class="highlight-pink"><strong>Alpha Phi Omega </strong></span>(Community Service
             Fraternity)<strong><em></em></strong><br></p>
@@ -122,7 +121,7 @@
           </ul>
         </div>
       </div>
-      <div class="w-layout-blockcontainer logo-left-lister w-container"><a href="https://www.cornellthetatau.com/"
+      <!-- <div class="w-layout-blockcontainer logo-left-lister w-container"><a href="https://www.cornellthetatau.com/"
           target="_blank"><img src="images/theta-tau-logo.png" loading="lazy" width="161"
             sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo"></a>
         <div class="w-layout-blockcontainer container-8 w-container">
@@ -136,7 +135,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div> -->
       <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/cru-logo.jpeg" loading="lazy"
           width="161" sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo">
         <div class="w-layout-blockcontainer container-8 w-container">
@@ -187,22 +186,23 @@
               alt="">
             <div class="text-block-3">Grace Hopper Conference, September 2023</div>
           </div>
+
+        </div>
+        <div class="w-layout-blockcontainer horiz-boxes w-container">
           <div class="w-layout-blockcontainer box w-container"><img src="images/IMG_4894.jpg" loading="lazy" width="409"
               sizes="(max-width: 479px) 100vw, (max-width: 767px) 47vw, (max-width: 991px) 344px, 409px" alt="">
             <div class="text-block-3">Cru Cornell, September 2023</div>
           </div>
-        </div>
-        <div class="w-layout-blockcontainer horiz-boxes w-container">
           <div class="w-layout-blockcontainer box w-container"><img src="images/journey-serve.JPG" loading="lazy"
               width="409" sizes="(max-width: 479px) 100vw, (max-width: 767px) 47vw, (max-width: 991px) 344px, 409px"
               alt="">
             <div class="text-block-3">The Journey Church Volunteer, July 2023</div>
           </div>
-          <div class="w-layout-blockcontainer box w-container"><img src="images/theta-tau.JPG" loading="lazy"
+          <!-- <div class="w-layout-blockcontainer box w-container"><img src="images/theta-tau.JPG" loading="lazy"
               width="409" sizes="(max-width: 479px) 100vw, (max-width: 767px) 47vw, (max-width: 991px) 344px, 409px"
               alt="">
             <div class="text-block-3">Cornell Theta Tau, November 2022</div>
-          </div>
+          </div> -->
         </div>
         <div class="w-layout-blockcontainer horiz-boxes w-container">
           <div class="w-layout-blockcontainer box w-container"><img src="images/urmc-table.jpg" loading="lazy"
